# docs/openapi.yml
@@ -493,6 +493,8 @@ components:
           type: boolean
         workId:
           type: string
+        blockSource:
+          type: string
     MergeBranchRequest:
       type: object
       required:
@@ -2924,4 +2926,4 @@ paths:
         - qits:admin-agent
 info:
   title: qits-workspaces API
-  version: 2026.1005.203201
+  version: 2026.1010.62416
